# alphaprofile

./: README.md  all.days  alpha.bn.ini  alpha.bn.whip.ini  expiry.days  pyproject.toml
alphaprofile/: __init__.py  cli.py  data.py  evaluation.py  metrics.py  selection.py  visuals.py
examples/: run_profile.py
tests/: test_metrics.py  test_selection.py
